--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,9 +20,8 @@ dependencies = [
     "scipy==1.11.1",
     "scikit-learn==1.3.0",
     "xpysom==1.0.7",
-    "matplotlib==3.8.0",
-    "seaborn==0.12.2",
-    "tqdm==4.66.1",
+    "matplotlib>=3.7",#"matplotlib==3.8.0",
+    "seaborn>=0.12",#"seaborn==0.12.2"
 ]
 
 [build-system]
