--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "xpysom==1.0.7",
     "matplotlib>=3.7",#"matplotlib==3.8.0",
     "seaborn>=0.12",#"seaborn==0.12.2"
+    "tqdm>=4.0"
 ]
 
 [build-system]
